<resources>
    <string name="app_name">CPool</string>
    <string name="welcome_to_cpool">Welcome to CPool</string>
    <string name="have_an_account_get_started">Have an Account ? Get Started !</string>
    <string name="login">LOGIN</string>
    <string name="new_to_cpool">New to CPool ?</string>
    <string name="signup">SIGNUP</string>
    <string name="lets_login">Lets Login</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="log_out">Log Out</string>
    <string name="your_profile">Your Profile</string>
    <string name="yourname">Name</string>
    <string name="emailid">Email</string>
    <string name="phone">Phone</string>
    <string name="your_name">Your Name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile">Mobile</string>
    <string name="emailadd">Email</string>
    <string name="password">Password</string>
    <string name="enter">ENTER</string>
    <string name="number_of_attempts_remaining">Number of attempts remaining:</string>
    <string name="let_s_login">LET\'S LOGIN</string>
    <string name="login_1">LOGIN</string>
    <string name="welcome">WELCOME</string>
    <string name="home">HOME</string>
    <string name="signup1">SIGNUP</string>
    <string name="message">Message....</string>
    <string name="sending_time">Sending Time</string>
    <string name="message_sender">Message Sender</string>
    <string name="message_content">Message Content</string>
    <string name="message01">Message</string>
    <string name="next">NEXT</string>
    <string name="your_journey">Your Journey</string>
    <string name="please_select_your_current_location">Please Select Your Current Location</string>
    <string name="please_select_your_destination">Please Select Your Destination</string>
    <string name="time">Time</string>
</resources>
